@@ -1,3 +1,7 @@
+2007-02-16  Matthias Klose  <doko@debian.org>
+
+	* texi2pod.pl: Handle @subsubsection, ignore @anchor.
+
 2007-02-13  Release Manager
 
 	* GCC 4.1.2 released.
